--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@vitalets/google-translate-api": "*"
+    "@vitalets/google-translate-api": "^2.8.0"
   },
-  "node-red" : {
+  "node-red": {
     "nodes": {
       "google-translate": "node.js"
     }
